--- a/style.css
+++ b/style.css
@@ -9,6 +9,95 @@ html {
   box-sizing: inherit;
   }
 
-  .container{
-  	width: 960px;
-  }
+/* HEADER */
+
+#head h1{
+  padding-bottom: 0 !important;
+  font-size: 175% !important;;
+  background-color: white !important;
+  color: black !important;
+}
+
+
+/* WHO AM I SECTION */
+
+.aboutMe p{
+  margin: 5%;
+}
+
+#Who .col-md-4{
+  font-weight: 900;
+  color: black;
+  text-align: center;
+  font-size: 200%;
+  padding: 2%; 
+  color: white;
+ }
+
+#Who .container-fluid{
+  background-color: black;
+  color: white;
+  padding: 5%;
+}
+
+#Who {
+  text-align: center;
+  padding: 0;
+}
+
+#welcome{
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+#Who p{
+  margin-top: 5%;
+  text-align: left !important;;
+}
+
+
+/* DAD QUOTE */
+
+quote{
+  font-size: 150%;
+  font-weight: 900;
+}
+
+.typeMe{
+  margin-top: 5%;
+  font-size: 200%;
+  font-weight: 900;
+}
+
+/* HIRE ME */
+
+.callToAction{
+  background-color: white !important;
+}
+
+.callToAction h2{
+  color: black;
+}
+
+/* WHAT I OFFER */
+
+#offers{
+  padding-top: 0;
+}
+
+#offerstag{
+  font-size: 250%;
+ color: black;
+}
+
+#portfolio iframe{
+  width: 10%;
+}
+
+#video-background{
+  width: 100%;
+}
+
+.portfolio-grid {
+  background-color: #2F3238;
+}
