--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ html {
 
 /* HEADER */
 
+
+
+#slides{
+  padding: 0!important;
+}
+
 #video-background{
   width: 100%;
 }
@@ -114,3 +120,13 @@ quote{
 .no-section-padding{
   margin-bottom: -5%;
 }
+
+
+@media only screen and (max-width: 940px){
+
+
+#video-background{
+  width: 1100px;
+}
+
+} 
