--- a/style.css
+++ b/style.css
@@ -130,3 +130,13 @@ quote{
 }
 
 } 
+
+@media screen and (max-width: 380px){
+   .hero h1{
+     margin-top: -20%!important; 
+     font-size: 20%!important;
+   }
+  .hero span{
+    font-size: 120%;
+  }
+}
